[metadata]
name = jwt_helper
author = Ole Hannemann
author_email = cerberus885@gmail.com
url = https://github.com/bad-microservices/jwt_helper
description = A wrapper around pyjwt
keywords = JWT

long_description = file: README.rst
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3.0
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Development Status :: 3 - Alpha
    Topic :: Software Development :: Libraries :: Python Modules
    Intended Audience :: Developers

[options]
packages = jwt_helper
install_requires =
    setuptools>=45.0
    pyjwt
    cryptography

